# cookies-backend

./: README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
core/: .env  settings.py  urls.py
locations/: admin.py  models.py  urls.py
locations/api/: permissions.py  serializer.py  view.py
locations/migrations/: 0001_initial.py
